@@ -3,6 +3,7 @@ DATE: 04/07/2021
 STAFF: lec
 TR13307/Adding PMIDS from Noctua load into MGI
 TR13349/Build 39/Relevance/Secondary Triage
+TR13288/Lit triage load - Handle text extraction problems better
 
 TAG: littriageload-6-0-16-6
 DATE: 01/04/2021
